feat: add hint over every element and changing elements by clicking on levels

--- a/RSS-CSS-Selectors/src/sass/blocks/_table-wrapper.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_table-wrapper.scss
@@ -17,3 +17,31 @@
   bottom: 0;
   width: 100%;
 }
+
+#size-one {
+  width: 400px;
+}
+
+#size-six {
+  width: 485px;
+}
+
+#size-seven {
+  width: 610px;
+}
+
+#size-eight {
+  width: 630px;
+}
+
+#size-nine {
+  width: 600px;
+}
+
+#size-ten {
+  width: 635px;
+}
+
+#size {
+  width: 274px;
+}
