--- a/RSS-CSS-Selectors/src/index.scss
+++ b/RSS-CSS-Selectors/src/index.scss
@@ -18,3 +18,4 @@
 @import "./sass/blocks/_menu-right";
 @import "./sass/blocks/_footer-contacts";
 @import "./sass/blocks/footer-wrapper";
+@import "./sass/blocks/_window";
