--- a/RSS-CSS-Selectors/src/sass/blocks/_table.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_table.scss
@@ -7,13 +7,14 @@
   z-index: 999;
   position: relative;
   white-space: nowrap;
+  display: flex;
 }
 
 .table__strobe {
   width: 100px;
   transform-origin: bottom;
-  animation: strobeStart .5s ease-out, strobe 1s infinite;
-  animation-delay: 0s, .5s;
+  // animation: strobeStart .5s ease-out, strobe 1s infinite;
+  // animation-delay: 0s, .5s;
   cursor: pointer;
 }
 
@@ -50,4 +51,114 @@ bento, plate {
   margin: 0 10px;
   position: relative;
 }
+
+.table img {
+  width: 97px;
+  height: 130px;
+  cursor: pointer;
+}
+
+apple {
+  border-radius: 100px;
+  border-style: solid;
+  border-width: 2px 4px 15px 4px;
+  position: relative;
+  background: #e41919;
+  border-color: #ab1212;
+  display: flex;
+  height: 38px;
+  margin: 20px 24px;
+}
+
+#fancy:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: calc(50% - 47px);
+  top: calc(50% - 44px);
+  height: 68px;
+  width: 74px;
+  border-radius: 60px;
+  border: solid 10px #009ff2;
+  opacity: .4;
+}
+
+bento {
+  height: 100px;
+  background: brown;
+  position: relative;
+  border: solid 3px #711c12;
+}
+
+bento:hover {
+  box-shadow: 0px 0px 0 6px rgba(255,255,255,.4);
+  cursor: pointer;
+}
+
+.strobe:hover {
+  box-shadow: 0px 0px 0 6px rgba(255,255,255,.4);
+  cursor: pointer;
+}
+
+apple:hover {
+  box-shadow: 0px 0px 0 6px rgba(255,255,255,.4);
+  cursor: pointer;
+}
+
+orange {
+  background: orange;
+  border-color: #bd6e07;
+  border-radius: 100px;
+  border-style: solid;
+  border-width: 2px 4px 15px 4px;
+  position: relative;
+  display: flex;
+  margin: 13px;
+  height: 50px;
+}
+
+orange:hover {
+  box-shadow: 0px 0px 0 6px rgba(255,255,255,.4);
+}
+
+pickle {
+  background: #179837;
+  border-radius: 30px;
+  position: relative;
+  border: solid 2px #025a18;
+  border-width: 2px 2px 9px 2px;
+  display: flex;
+  width: 18px;
+  height: 49px;
+  margin: 24px 40px;
+}
+
+pickle:hover {
+  box-shadow: 0 0 0 6px rgba(0, 0, 0, .3);
+}
+
+apple.small {
+  height: 20px;
+  margin: 31px 32px;
+}
+
+orange.small {
+  height: 20px;
+  margin: 31px 32px;
+}
+
+.table__strobe apple:hover {
+  box-shadow: 0 0 0 6px rgba(0, 0, 0, .3);
+}
+
+.table__strobe pickle:hover {
+  box-shadow: 0 0 0 6px rgba(0, 0, 0, .3);
+}
+
+.table__strobe orange:hover {
+  box-shadow: 0 0 0 6px rgba(0, 0, 0, .3);
+}
+
+
+
 
