--- a/RSS-CSS-Selectors/src/sass/blocks/_keyframes.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_keyframes.scss
@@ -29,3 +29,11 @@
     transform: skew(4deg,0deg) scaleX(1);
   }
 }
+
+@keyframes shake {
+  0% { transform: rotate(0deg); }
+  25% { transform: rotate(5deg); }
+  50% { transform: rotate(0eg); }
+  75% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
