--- a/RSS-CSS-Selectors/src/sass/blocks/_menu-right.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_menu-right.scss
@@ -20,3 +20,8 @@ h1 {
 .selected {
   background-color: rgba(255, 166, 0, 0.59);
 }
+
+#one {
+  text-decoration: underline;
+  text-decoration-color: #ffa50087;
+}
