feat: add test for one function and translate colors to hsl

--- a/RSS-CSS-Selectors/src/sass/base/_variable.scss
+++ b/RSS-CSS-Selectors/src/sass/base/_variable.scss
@@ -1,2 +1,40 @@
-$main-color: #2e2a23;
-$fonts-color: rgba(255,255,255,.3);
+$main-color: hsl(39, 14%, 14%);
+$fonts-color: hsla(0, 0%, 100%, 0.3);
+$buttonColor: hsla(36, 100%, 50%, 0.59);
+$headerInputColor: hsla(0, 0%, 100%, 0.6);
+$headerInputBorderColor: hsla(0, 0%, 100%, 0.05);
+$headerInputBackColor: hsla(0, 0%, 0%, 0.15);
+$appleBackColor: hsl(0, 80%, 39%);
+$appleBorderColor: hsl(4, 80%, 34%);
+$bentoBackColor: hsl(0, 50%, 41%);
+$bentoBorderColor: hsl(15, 70%, 27%);
+$fancyPlateColor: hsl(202, 100%, 48%);
+$playElementsHoverColor: hsla(0, 0%, 100%, 0.4);
+$plateColor: hsla(0, 0%, 100%, 1);
+$plateBorderTopColor: hsl(0, 0%, 80%);
+$plateBorderBottomColor: hsl(0, 0%, 87%);
+$orangeBackgroundColor: hsl(39, 100%, 50%);
+$orangeBorderColor: hsl(29, 88%, 38%);
+$playElementsHoverDarkColor: hsla(0, 0%, 0%, 0.3);
+$pickleBorderColor: hsl(139, 92%, 24%);
+$pickleBackColor: hsl(137, 64%, 34%);
+$editorBorderColor: hsla(0, 0%, 0%, 0.35);
+$buttonHelpColor: hsla(0, 0%, 0%, 0.2);
+$rightColumnColor: hsla(0, 0%, 0%, 0.2);
+$numbersColor: hsl(0, 0%, 60%);
+$numbersBorderColor: hsl(0, 0%, 20%);
+$numbersBackColor: hsl(0, 0%, 87%);
+$enterButtonColor: hsl(0, 0%, 40%);
+$enterButtonBorderColor: hsl(0, 0%, 60%);
+$inputWindowTextColor: hsl(0, 0%, 67%);
+$inputWindowCSSBackColor: hsl(0, 0%, 94%);
+$tableSurfaceBackColor: hsl(39deg 79.63% 44.48%);
+$tableSurfaceShadow: hsla(0, 0%, 0%, 0.2);
+$plateBorderBottomColor: hsl(0, 0%, 87%);
+$windowBackColor: hsl(0, 0%, 100%);
+$windowBorderBottomColor: hsl(0, 0%, 73%);
+
+
+
+
+
