--- a/RSS-CSS-Selectors/src/sass/blocks/_editor.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_editor.scss
@@ -3,10 +3,10 @@
   text-align: left;
   width: 90%;
   margin: 0 auto;
-  border: solid 10px rgba(0,0,0,.35);
+  border: solid 10px $editorBorderColor;
   border-radius: 4px;
   overflow: hidden;
-  box-shadow: 0px 5px 6px 5px rgba(255, 255, 255,.4);
+  box-shadow: 0px 5px 6px 5px $playElementsHoverColor;
   height: 478px;
   margin-bottom: 65px;
 }
@@ -25,11 +25,11 @@
 .editor .header-input {
   text-align: left;
   padding: 10px 15px;
-  background: rgba(0,0,0,.15);
-  border-top: solid 1px rgba(255,255,255,.05);
-  border-bottom: solid 1px rgba(255,255,255,.05);
+  background: $headerInputBackColor;
+  border-top: solid 1px $headerInputBorderColor;
+  border-bottom: solid 1px $headerInputBorderColor;
   border-radius: 2px 2px 0 0;
-  color: rgba(255,255,255,.6);
+  color: $headerInputColor;
 }
 
 .editor .file-name {
@@ -38,8 +38,8 @@
 }
 
 .editor .css-view {
-  background: #efefef;
-  color: #AAA;
+  background: $inputWindowCSSBackColor;
+  color: $inputWindowTextColor;
 }
 
 .editor .input-window {
@@ -57,13 +57,11 @@
 }
 
 .editor input.input-strobe {
-  background: rgba(62,203,255,.3);
   animation: input .5s infinite;
 }
 
 .editor input {
-  color: #333;
+  color: $main-color;
   border: none;
   width: calc(100% - 46px);
-  
 }
