--- a/RSS-CSS-Selectors/src/sass/blocks/_left-column.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_left-column.scss
@@ -1,5 +1,5 @@
 .left-column {
-  background-color: #2e2a23;
+  background-color: $main-color;
   height: 100vh;
   width: 60%;
   text-align: center;
@@ -9,3 +9,4 @@
   left: 0;
   z-index: 2;
 }
+
