--- a/RSS-CSS-Selectors/src/sass/blocks/_right-column.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_right-column.scss
@@ -1,5 +1,5 @@
 .right-column {
-  background-color: rgba(0,0,0,.2);
+  background-color: $rightColumnColor;
   height: 115vh;
   position: fixed;
   width: 40%;
