--- a/RSS-CSS-Selectors/src/sass/blocks/_table-wrapper.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_table-wrapper.scss
@@ -10,8 +10,8 @@
 }
 
 .table-wrapper__surface {
-  box-shadow: 0px 40px 10px rgba(0,0,0,.2);
-  background: linear-gradient(#dd992d,#cd8c26);
+  box-shadow: 0px 40px 10px $tableSurfaceShadow;
+  background: $tableSurfaceBackColor;
   position: absolute;
   height: 100%;
   bottom: 0;
