--- a/RSS-CSS-Selectors/src/sass/blocks/_window.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_window.scss
@@ -1,11 +1,11 @@
 .window {
   position: absolute;
-  background: white;
+  background: $windowBackColor;
   z-index: 1000;
   font-size: 18px;
-  color: #666;
-  border-bottom: solid 2px #BBB;
-  box-shadow: 0px 5px 0px rgba(0,0,0,.2);
+  color: $main-color;
+  border-bottom: solid 2px $windowBorderBottomColor;
+  box-shadow: 0px 5px 0px $rightColumnColor;
   transform: rotateX(20deg);
   outline: solid 1px transparent;
   word-wrap: nowrap;
@@ -14,4 +14,5 @@
   top: 24%;
   border-radius: 10px;
 }
+
 
