--- a/RSS-CSS-Selectors/src/sass/blocks/_game-wrapper.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_game-wrapper.scss
@@ -1,5 +1,5 @@
 .game-wrapper {
-  transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
   perspective: 400px;
   text-align: center;
   position: relative;
