--- a/RSS-CSS-Selectors/src/sass/blocks/_table.scss
+++ b/RSS-CSS-Selectors/src/sass/blocks/_table.scss
@@ -53,7 +53,8 @@ plate {
   border-radius: 100px;
 }
 
-bento, plate {
+bento,
+plate {
   display: inline-block;
   width: 100px;
   height: 100px;
